@@ -1,3 +1,7 @@
+2000-03-18  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSNumber.m: Added private methods from concrete class.
+
 2000-03-17  Adam Fedor  <fedor@gnu.org>
 
 	* Documentation/coding-standards.tmpl.texi: Update
